# jira-exporter

./: .gitignore  Makefile  README.md  pyproject.toml
examples/: example_issues_csv.md  example_summary_csv.md
jira_exporter/: __main__.py  config.json  config.py  exporter.py  extractors.py  jira_client.py  validators.py
tests/: test_core.py
